<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="apiKey">48a5ee87fadc129033207cea80b86b81</string>

    //TODO: Change to My Movies for final project
    <string name="app_name">3R_MovieCollection</string>
    <string name="movie_collection">Movie Collection!</string>
    <string name="action_settings">Settings</string>

    <string-array name="navigation_drawer_items">
        <item>Home</item>
        <item>My Collection</item>
        <item>My Ratings</item>
        <item>Random Picks</item>
        <item>Movie Metrics</item>
        <item>About</item>
    </string-array>

    <string name="search_toolbar">Search</string>
    <string name="movie_details_toolbar">Movie Details</string>
    <string name="random_picks_result_toolbar">Random Picks</string>

    // Home fragment
    <string name="new_releases">Now Playing</string>
    <string name="recently_added">Recently Added</string>
    <string name="just_watched">Just Watched</string>
    <string name="most_popular">Most Popular</string>
    <string name="searchActivity">MovieSearch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_header">Welcome to My Movies</string>
    <string name="intro_text">Look up your favourite movies\nand add them to your collection</string>

    // My Collection Fragment
    <string name="filter_pane_text">Filter Collection</string>
    <string name="filter_pane_genre">Show Genre(s)</string>
    <string name="filter_pane_OK">OK</string>
    <string name="filter_pane_rating">Max Rating</string>
    <string name="filter_pane_length">Max Length</string>
    <string name="filter_pane_sort_option_title">Sort By</string>
    <string-array name="filter_sort_options">
        <item>Title</item>
        <item>Film Rating</item>
        <item>Runtime</item>
        <item>Release Date</item>
    </string-array>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>

    //genre_filter dialog
    <string name="genre_filter_dialog_title">Display Which Genre(s)?</string>
    <string name="genre_filter_positive">OK</string>
    <string name="genre_filter_negative">Cancel</string>

    // My Lists Fragment
    <string name="my_lists_header">My Lists</string>
    <string name="my_list_1">My List 1</string>
    <string name="my_list_2">My List 2</string>
    <string name="my_list_3">My List 3</string>

    // Search Results Fragment
    <string name="search_results_tag">search_results_tag</string>
    <string name="search_results">Search Results</string>
    <string name="search_hint">Search Movies</string>
    <string name="collection_tab_title">My Collection</string>
    <string name="online_tab_title">Online Search</string>
    <string name="no_results">0 Results</string>
    <string name="result">Result</string>
    <string name="results">Results</string>
    <string name="no_connection">Unable to connect for search</string>
    <string name="db_error">Database Error</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="quick_add_descriptor">Quick Add Button</string>

    // Movie Details fragment
    <string name="movie_details_tag">movie_details_tag</string>
    <string name="movie_title">Movie Title (Year)</string>
    <string name="director">Directed by John Doe</string>
    <string name="add_movie_text">Add Movie</string>
    <string name="remove_movie_text">Remove Movie</string>
    <string name="synopsis_header_text">Synopsis</string>
    <string name="synopsis_text">Synopsis of movie</string>
    <string name="movie_details_header">Movie Details</string>
    <string name="film_rating_label">Film Rating:</string>
    <string name="film_rating_field">N/A</string>
    <string name="runtime_label">Runtime:</string>
    <string name="runtime_field">N/A</string>
    <string name="genre_label">Genre:</string>
    <string name="genre_field">N/A</string>
    <string name="studio_label">Studio:</string>
    <string name="studio_field">N/A</string>
    <string name="budget_label">Budget:</string>
    <string name="budget_field">N/A</string>
    <string name="revenue_label">Revenue:</string>
    <string name="revenue_field">N/A</string>
    <string name="release_date_label">Release Date:</string>
    <string name="release_date_field">N/A</string>
    <string name="watch_header">Watch Status</string>
    <string name="last_watched_label">Last Watched:</string>
    <string name="last_watched_field">Never</string>
    <string name="watch_count_label">Watch Count:</string>
    <string name="watch_count_field">0 times</string>
    <string name="watch_button">Watched</string>
    <string name="rating_header">Movie Rating</string>
    <string name="user_rating_text">User Rating:\n##/5 (### votes)</string>
    <string name="my_rating_text">My Rating</string>
    <string name="review_header_text">My Review</string>
    <string name="save_review_text">Save Review</string>

    // My Ratings fragment
    <string name="rating_item_title">Movie Title (Year)</string>
    <string name="rating_item_review">Show Review</string>
    <string name="rating_item_review_body">Review Body</string>
    <string name="expand_button">Expand</string>
    <string name="collapse_button">Collapse</string>

    // Random Picks fragment
    <string name="random_picks_tag">random_picks_tag</string>
    <string name="random_picks_header">Random Picks</string>
    <string name="preferences_header">Set Your Preferences</string>
    <string name="genre_pref_label">Genre</string>
    <string name="runtime_pref_label">Max Runtime</string>
    <string name="runtime_value">No limit</string>
    <string name="film_rating_pref_label">Max Rating</string>
    <string name="year_range_pref_label">Year Range</string>
    <string name="unwatched_pref_label">Unwatched</string>
    <string name="pref_submit">Get Random Pick</string>

    // Random Picks Result fragment
    <string name="random_picks_result_tag">random_picks_result_tag</string>
    <string name="random_picks_result_header">Random Picks Result</string>
    <string name="random_picks_title">Movie Title\n(Year)</string>
    <string name="random_picks_poster">Random Picks Poster Button</string>
    <string name="next_pick">Next Random Pick</string>
    <string name="results_criteria">We did not find any movies matching that criteria in your collection.</string>

    // About fragment
    <string name="version_text">Version 1.0\n© 2015 Team KGY</string>
    <string name="feedback_button_text">Send Feedback</string>
    <string name="feedback_description_text">Tell us what you think</string>
    <string name="report_button_text">Report Bugs</string>
    <string name="report_description_text">Let us know about a bug or problem</string>
    <string name="share_button_text">Share</string>
    <string name="share_description_text">Tell your friends where they can get this app</string>
    <string name="app_description_text">My Movies allows you to keep track of movies you own and watch. Movie information is provided by The Movie Database (TMDb). This app is optimized for Lollipop.</string>
    <string name="feedback_subject">My Movies: Feedback</string>
    <string name="report_subject">My Movies: Bug Report</string>
    <string name="share_subject">Check out My Movies App!</string>
    <string name="share_body">Hey, you should check out this app I found. It\'s called My Movies. It\'s great for tracking movies you own and looking up new movies to watch.</string>

    //movie metric strings
    <string name="collection_stats_header">My Collection Stats</string>
    <string name="text_num_movies"># movies in collection:</string>
    <string name="collection_genres">Genres</string>
    <string name="collection_film_rating">Film Ratings</string>
    <string name="collection_star_rating">My Ratings</string>
    <string name="viewing_stats_header">My Viewing Stats</string>
    <string name="text_num_movies_watched"># movies watched:</string>
    <string name="text_num_movies_watched_hours">watched minutes:</string>
    <string name="rating_stats_header">My Rating Stats</string>
    <string name="text_movies_rated"># movies rated:</string>
    <string name="text_movies_reviewed"># movies reviewed:</string>


    <string name="hello_world">Hello world!</string>
</resources>
