<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.school.comp3717.moviecollection.About"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/versionText"
        android:text="@string/version_text"
        android:textColor="@color/grey_800"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feedbackButton"
        android:text="@string/feedback_button_text"
        android:textColor="@color/green_300"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feedbackDescription"
        android:text="@string/feedback_description_text"
        android:textColor="@color/grey_600"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reportButton"
        android:text="@string/report_button_text"
        android:textColor="@color/green_300"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reportText"
        android:text="@string/report_description_text"
        android:textColor="@color/grey_600"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shareButton"
        android:text="@string/share_button_text"
        android:textColor="@color/green_300"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shareText"
        android:text="@string/share_description_text"
        android:textColor="@color/grey_600"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey_600"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appDescription"
        android:text="@string/app_description_text"
        android:textColor="@color/grey_800"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

</LinearLayout>
