<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/grey_300"
    android:paddingBottom="15dp"
    android:descendantFocusability="blocksDescendants">

    <com.school.comp3717.moviecollection.tools.AutoFitTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rating_item_title"
        android:id="@+id/ratingItemTitle"
        android:textColor="@color/grey_800"
        android:paddingTop="5dp"
        android:layout_margin="10dp"
        android:textIsSelectable="false"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="5"
        android:stepSize=".5"
        style="@style/movieRatingBar"
        android:id="@+id/ratingItemValue"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rating_item_review"
        android:id="@+id/ratingItemReviewHeader"
        android:textColor="@color/grey_800"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:layout_gravity="center_vertical"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expandCollapseButton"
            android:src="@drawable/arrow_down"
            android:contentDescription="@string/expand_button"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/ratingItemReviewWrapper"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rating_item_review_body"
            android:id="@+id/ratingItemReviewBody"
            android:textColor="@color/grey_800"
            android:textIsSelectable="false"/>

    </LinearLayout>

</LinearLayout>