<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.school.comp3717.moviecollection.RandomPicksResult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_300"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/randomPicksWrapper"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageButton
                android:layout_width="180dp"
                android:layout_height="270dp"
                android:id="@+id/randomPicksPoster"
                android:src="@drawable/default_poster"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:contentDescription="@string/random_picks_poster"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/randomPicksTitle"
                android:text="@string/random_picks_title"
                android:textColor="@color/grey_800"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nextPickButton"
                android:text="@string/next_pick"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>