<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filter_pane"
        android:background="@color/grey_0">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filter_text"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/filter_pane_text"
                android:background="@color/green_300"
                android:textColor="@color/grey_0"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filter_table"
                android:layout_below="@+id/filter_text"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_pane_sort_option_title"
                        android:id="@+id/sort_by_text"
                        android:textColor="@color/green_800" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_pane_rating"
                        android:id="@+id/rating_text"
                        android:textColor="@color/green_800"/>

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_pane_length"
                        android:id="@+id/length_text"
                        android:textColor="@color/green_800"/>

                    <SeekBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/seekBar" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp">


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_pane_genre"
                        android:id="@+id/button"
                        android:background="@color/green_300"
                        android:layout_gravity="center"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_span="2"
                        android:textColor="@color/grey_0"/>
                </TableRow>
            </TableLayout>

        </RelativeLayout>
</FrameLayout>