<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.school.comp3717.moviecollection.MovieMetrics"
    android:background="@color/grey_300">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/collection_stats_header"
            android:textColor="@color/grey_800"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:layout_marginBottom="5dp"
            android:id="@+id/movie_stats_header"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_stats_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_num_movies"
            android:textColor="@color/grey_800"
            android:layout_marginBottom="5dp"
            android:id="@+id/text_num_movies"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:layout_gravity="end"
            android:gravity="end"
            android:textColor="@color/grey_800"
            android:id="@+id/num_movies"
            android:layout_below="@id/movie_stats_header"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true" />
        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_below="@id/num_movies"
            android:background="@color/grey_300"
            android:layout_marginBottom="5dp"
            android:id="@+id/genre_collection_chart"/>
        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_below="@id/genre_collection_chart"
            android:background="@color/grey_300"
            android:layout_marginBottom="20dp"
            android:id="@+id/rating_collection_chart"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewing_stats_header"
            android:textColor="@color/grey_800"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:layout_below="@id/rating_collection_chart"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="35dp"
            android:id="@+id/viewing_stats_header"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_num_movies_watched"
            android:textColor="@color/grey_800"
            android:layout_below="@id/viewing_stats_header"
            android:layout_marginBottom="5dp"
            android:id="@+id/text_num_movies_watched"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:layout_gravity="end"
            android:gravity="end"
            android:textColor="@color/grey_800"
            android:id="@+id/num_movies_watched"
            android:layout_below="@id/viewing_stats_header"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_num_movies_watched_hours"
            android:textColor="@color/grey_800"
            android:layout_below="@id/text_num_movies_watched"
            android:layout_marginBottom="5dp"
            android:id="@+id/text_num_movies_watched_hours"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:layout_gravity="end"
            android:gravity="end"
            android:textColor="@color/grey_800"
            android:id="@+id/num_movies_watched_hours"
            android:layout_below="@id/text_num_movies_watched"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true" />
        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_below="@id/num_movies_watched_hours"
            android:background="@color/grey_300"
            android:layout_marginBottom="5dp"
            android:id="@+id/genre_viewing_chart"/>
        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_below="@id/genre_viewing_chart"
            android:background="@color/grey_300"
            android:layout_marginBottom="5dp"
            android:id="@+id/rating_viewing_chart"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_stats_header"
            android:textColor="@color/grey_800"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:layout_below="@id/rating_viewing_chart"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="35dp"
            android:id="@+id/rating_stats_header"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_movies_rated"
            android:textColor="@color/grey_800"
            android:layout_below="@id/rating_stats_header"
            android:layout_marginBottom="5dp"
            android:id="@+id/text_movies_rated"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:layout_gravity="end"
            android:gravity="end"
            android:textColor="@color/grey_800"
            android:id="@+id/movies_rated"
            android:layout_below="@id/rating_stats_header"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_movies_reviewed"
            android:textColor="@color/grey_800"
            android:layout_below="@id/movies_rated"
            android:layout_marginBottom="5dp"
            android:id="@+id/text_movies_reviewed"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:layout_gravity="end"
            android:gravity="end"
            android:textColor="@color/grey_800"
            android:id="@+id/movies_reviewed"
            android:layout_below="@id/movies_rated"
            android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true" />
        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_below="@id/movies_reviewed"
            android:layout_marginBottom="5dp"
            android:id="@+id/movie_rating_chart"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@id/movie_rating_chart"
            android:id="@+id/metric_filler"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>
</ScrollView>
